conversion to spark almost completed - angular needs update to understand ok login message